--- a/index.html
+++ b/index.html
@@ -325,51 +325,50 @@
   <footer class="fixed-bottom">
     <div class="music-player">
       <div class="song-bar">
-        <div class="song-infos">
-          <div class="image-container">
-            <img
-              src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg"
-              alt="" />
+          <div class="song-infos">
+              <div class="image-container">
+                  <img src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg" alt="" />
+              </div>
+              <div class="song-description">
+                  <p class="title">
+                      Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
+                  </p>
+                  <p class="artist">Masaru Yokoyama</p>
+              </div>
           </div>
-          <div class="song-description">
-            <p class="title">
-              Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
-            </p>
-            <p class="artist">Masaru Yokoyama</p>
+          <div class="icons">
+              <i class="far fa-heart"></i>
+              <i class="fas fa-compress"></i>
           </div>
-        </div>
-        <div class="icons">
-          <i class="far fa-heart"></i>
-          <i class="fas fa-compress"></i>
-        </div>
       </div>
       <div class="progress-controller">
-        <div class="control-buttons">
-          <i class="fas fa-random"></i>
-          <i class="fas fa-step-backward"></i>
-          <i class="play-pause fas fa-play"></i>
-          <i class="fas fa-step-forward"></i>
-          <i class="fas fa-undo-alt"></i>
-        </div>
-        <div class="progress-container">
-          <span>0:49</span>
-          <div class="progress-bar">
-            <div class="progress"></div>
+          <div class="control-buttons">
+              <i class="fas fa-random"></i>
+              <i class="fas fa-step-backward"></i>
+              <i class="play-pause fas fa-play"></i>
+              <i class="fas fa-step-forward"></i>
+              <i class="fas fa-undo-alt"></i>
           </div>
-          <span>3:15</span>
-        </div>
+          <div class="progress-container" id="progress-container">
+              <span id="current-time">0:00</span>
+              <div class="progress-bar" id="progress-bar">
+                  <div class="progress" id="progress"></div>
+              </div>
+              <span id="duration">3:15</span>
+          </div>
       </div>
       <div class="other-features">
-        <i class="fas fa-list-ul"></i>
-        <i class="fas fa-desktop"></i>
-        <div class="volume-bar">
-          <i class="fas fa-volume-down"></i>
-          <div class="progress-bar">
-            <div class="progress"></div>
+          <i class="fas fa-list-ul"></i>
+          <i class="fas fa-desktop"></i>
+          <div class="volume-bar" id="volume-bar">
+              <i class="fas fa-volume-down"></i>
+              <div class="progress-bar" id="volume-progress-bar">
+                  <div class="progress" id="volume-progress"></div>
+              </div>
+              <i class="fas fa-volume-up"></i>
           </div>
-        </div>
       </div>
-    </div>
+  </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
