--- a/album.html
+++ b/album.html
@@ -8,6 +8,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="stylesheet" href="./assets/scss/bootstrap.css" />
     <link rel="stylesheet" href="./assets/scss/my-style/personal-style.css" />
@@ -235,11 +242,55 @@
     </div>
     <!-------------------------------------------------Player---------------------------------------------------------------------->
     <footer class="fixed-bottom">
-      <nav class="d-flex navbar personal-border personal-bg z-1">
-        <div class="container-fluid">
-          <a class="navbar-brand text-light" href="#">Navbar</a>
+      <div class="music-player">
+        <div class="song-bar">
+          <div class="song-infos">
+            <div class="image-container">
+              <img
+                src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg"
+                alt=""
+              />
+            </div>
+            <div class="song-description">
+              <p class="title">
+                Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
+              </p>
+              <p class="artist">Masaru Yokoyama</p>
+            </div>
+          </div>
+          <div class="icons">
+            <i class="far fa-heart"></i>
+            <i class="fas fa-compress"></i>
+          </div>
         </div>
-      </nav>
+        <div class="progress-controller">
+          <div class="control-buttons">
+            <i class="fas fa-random"></i>
+            <i class="fas fa-step-backward"></i>
+            <i class="play-pause fas fa-play"></i>
+            <i class="fas fa-step-forward"></i>
+            <i class="fas fa-undo-alt"></i>
+          </div>
+          <div class="progress-container" id="progress-container">
+            <span id="current-time">0:00</span>
+            <div class="progress-bar" id="progress-bar">
+              <div class="progress" id="progress"></div>
+            </div>
+            <span id="duration">3:15</span>
+          </div>
+        </div>
+        <div class="other-features">
+          <i class="fas fa-list-ul"></i>
+          <i class="fas fa-desktop"></i>
+          <div class="volume-bar" id="volume-bar">
+            <i class="fas fa-volume-down"></i>
+            <div class="progress-bar" id="volume-progress-bar">
+              <div class="progress" id="volume-progress"></div>
+            </div>
+            <i class="fas fa-volume-up"></i>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script
