--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               </button>
             </div>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
+          <div class="carousel-inner" id="carosello_princ">
+            <!-- <div class="carousel-item active" data-bs-interval="10000">
               <div class="card mb-3 bg-dark bg-gradient">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -175,9 +175,9 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="carousel-item" data-bs-interval="2000">
+            <!-- <div class="carousel-item" data-bs-interval="2000">
               <div class="card mb-3 bg-dark bg-gradient">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -201,8 +201,9 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="carousel-item">
+            </div> -->
+            
+            <!-- <div class="carousel-item">
               <div class="card mb-3 bg-dark bg-gradient">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -226,7 +227,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <!-- SEZIONE BUONASERA -->
           <section class="mb-4">
