--- a/artist.html
+++ b/artist.html
@@ -28,7 +28,6 @@
             <div class="sidebar-header">
               <ul class="nav flex-column">
                 <li class="nav-item"></li>
-                
               </ul>
             </div>
             <!--Row interna nav------------------------------------>
@@ -117,8 +116,9 @@
           </div>
         </nav>
         <!----------main----------------------------------------------------------------------------->
+        <!-----bottoni------>
         <main class="col-12 col-md-7 p-0 m-0">
-          <div class="p-0" id="sfondo_immagine">
+          <div class="px-0 py-4" id="sfondo_immagine">
             <div class="d-flex justify-content-between">
               <div class="ms-3">
                 <button
@@ -146,7 +146,7 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-
+              <!-----drop------>
               <div>
                 <div class="dropdown">
                   <button
@@ -196,12 +196,13 @@
                 </div>
               </div>
             </div>
-            <div class="ms-3">
-              <p class="text-white">
+            <!-----hero------>
+            <div class="ms-3 mt-5">
+              <p class="text-white m-0">
                 <i class="bi bi-patch-check-fill text-primary me-1"></i>Artista
                 Verificato
               </p>
-              <h1 class="text-white" id="nome_artista"></h1>
+              <h1 class="text-white fs-tile" id="nome_artista"></h1>
               <p class="text-white" id="numero_ascoltatori"></p>
             </div>
           </div>
