--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
               <h5 class="text-light mt-2">Attività amici</h5>
             </div>
             <div>
-              <i class="bi bi-person-add fs-5 text-white-50"></i>
-              <i class="bi bi-x fs-4 text-white-50"></i>
+              <i class="bi bi-person-add fs-5 text-white-50 icon-personal"></i>
+              <i class="bi bi-x fs-4 text-white-50 icon-personal"></i>
             </div>
           </div>
 
           <div class="mt-3">
-            <div class="card-side d-flex justify-content-between text-white-50">
+            <div class="card-side d-flex justify-content-between text-white-50 aside-personal">
               <div class="w-25">
                 <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-1.jpg" alt="" />
               </div>
@@ -281,7 +281,7 @@
               </div>
             </div>
             <!---->
-            <div class="card-side d-flex justify-content-between text-white-50 mt-3">
+            <div class="card-side d-flex justify-content-between text-white-50 mt-3  aside-personal">
               <div class="w-25">
                 <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-2.jpg" alt="" />
               </div>
@@ -297,7 +297,7 @@
               </div>
             </div>
             <!---->
-            <div class="card-side d-flex justify-content-between text-white-50 mt-3">
+            <div class="card-side d-flex justify-content-between text-white-50 mt-3  aside-personal">
               <div class="w-25">
                 <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-3.jpg" alt="" />
               </div>
