--- a/artist.html
+++ b/artist.html
@@ -116,9 +116,14 @@
           </div>
         </nav>
         <!----------main----------------------------------------------------------------------------->
-        <!-----bottoni------>
-        <main class="col-12 col-md-7 p-0 m-0">
-          <div class="px-0 py-4" id="sfondo_immagine">
+
+        <main class="col-12 col-md-7 p-0 m-0 mb-5">
+          <div
+            class="px-0 py-4 heigth sfondo-img text-light d-flex flex-column justify-content-between"
+            id="sfondo_immagine"
+          >
+            <!-----bottoni------>
+            <div class="overlay"></div>
             <div class="d-flex justify-content-between">
               <div class="ms-3">
                 <button
@@ -197,7 +202,7 @@
               </div>
             </div>
             <!-----hero------>
-            <div class="ms-3 mt-5">
+            <div class="ms-3 mt-5 testo">
               <p class="text-white m-0">
                 <i class="bi bi-patch-check-fill text-primary me-1"></i>Artista
                 Verificato
@@ -207,11 +212,11 @@
             </div>
           </div>
 
-          <div>
-            <button class="btn btn-trasparent p-0 ms-2">
-              <i class="bi bi-play-circle-fill text-white fs-1"></i>
+          <div class="mx-4 my-3">
+            <button class="btn btn-trasparent p-0">
+              <i class="bi-play-circle-fill fa-4x text-success"></i>
             </button>
-            <button type="button" class="btn btn-outline-light py-1 mx-2">
+            <button type="button" class="btn btn-outline-light py-1 mx-4">
               FOLLOWING
             </button>
             <button class="btn btn-trasparent p-0">
@@ -219,11 +224,11 @@
             </button>
           </div>
 
-          <div class="container">
+          <div class="container ms-2">
             <div class="row mt-2">
-              <div class="col-7 mt-1">
+              <div class="col-12 col-xl-7 mt-1">
                 <!-- prima colonna-->
-                <h4 class="text-white">Popolari</h4>
+                <h4 class="text-white mb-3">Popolari</h4>
                 <table class="table table-borderless">
                   <thead></thead>
                   <tbody id="songs-list"></tbody>
@@ -231,17 +236,19 @@
               </div>
               <div class="col-12 col-xl-5 mt-1">
                 <!-- seconda colonna-->
-                <h4 class="text-white">Brani che ti piacciono</h4>
+                <h4 class="text-white mb-3">Brani che ti piacciono</h4>
                 <div class="row">
-                  <div class="col-5 w-25">
+                  <div class="col-5 w-25 align-self-center">
                     <img
                       src="./Assets_esercizio/imgs/main/image-15.jpg"
                       alt=""
-                      class="w-100 rounded-5"
+                      class="w-75 rounded-5"
                     />
                   </div>
-                  <div class="col-7">
-                    <h6 class="text-white">Hai messo Mi piace a 11 brani</h6>
+                  <div class="col-7 align-self-center">
+                    <h6 class="text-white mt-2">
+                      Hai messo Mi piace a 11 brani
+                    </h6>
                     <p id="artista_nome" class="text-white-50"></p>
                   </div>
                 </div>
@@ -339,6 +346,7 @@
         </aside>
       </div>
     </div>
+
     <!-------------------------------------------------Player---------------------------------------------------------------------->
     <footer class="fixed-bottom">
       <div class="music-player">
