--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </li>
 
                 <li class="nav-item d-flex align-items-center personal-list">
-                  <a class="nav-link active link-light fw-medium" href="#"><i
-                      class="bi bi-house-door-fill text-light me-1"></i>
+                  <a class="nav-link active text-white-50 fw-medium" href="./index.html"><i
+                      class="bi bi-house-door-fill text-white-50 me-1"></i>
                     Home
                   </a>
                 </li>
