--- a/artist.html
+++ b/artist.html
@@ -23,7 +23,7 @@
   <body class="personal-bg">
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-3 d-none d-md-block sidebar bg-black">
+        <nav class="col-3 d-none d-md-block sidebar bg-black xin">
           <div class="sticky-bottom">
             <div class="sidebar-header">
               <ul class="nav flex-column">
@@ -258,7 +258,7 @@
         </main>
 
         <!----------Sidebar------------------------------------------------------------------------------>
-        <aside class="col d-none col-md-2 d-md-block bg-black">
+        <aside class="col d-none col-md-2 d-md-block bg-black xin">
           <div id="side" class="mt-3">
             <div
               class="d-flex justify-content-between align-items-center"
