--- a/album.html
+++ b/album.html
@@ -126,10 +126,10 @@
               <div class="row border-0" id="title_album"></div>
             </div>
 
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center mb-4">
               <div>
                 <i
-                  class="bi bi-play-circle-fill fa-4x text-success ms-3 me-4"
+                  class="bi bi-play-circle-fill fa-4x text-success ms-4 me-4"
                 ></i>
               </div>
               <div>
