--- a/artist.html
+++ b/artist.html
@@ -259,6 +259,90 @@
               </div>
             </div>
           </div>
+          <!------------------------footer prova-->
+          <div class="border-bottom">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-md-4">
+                  <!-- COLONNA SX -->
+                  <ul class="list-unstyled mb-0 text-center py-4">
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Chi siamo</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Opportunità di lavoro</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >For the Record</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 col-md-4">
+                  <!-- COLONNA SX -->
+                  <ul class="list-unstyled mb-0 text-center py-4">
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white">
+                        Community</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Per artisti</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Sviluppatori</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Pubblicità</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 col-md-4">
+                  <!-- COLONNA SX -->
+                  <ul class="list-unstyled mb-0 text-center py-4">
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white"
+                        >Link utili</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Assistenza</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >App per cellulare gratuita</a
+                      >
+                    </li>
+                    <li class="mt-3">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >FDiritti del consumatore</a
+                      >
+                    </li>
+                  </ul>
+                  <br />
+                  <br />
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
 
         <!----------Sidebar------------------------------------------------------------------------------>
